gotta make a test branch
mucku wucky stuff

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,3 +104,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/CPP_Unreal.IADataConfig.Jump",NewName="/Script/CPP_Unreal.IADataConfig.Boost")
++PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.WalkSpeed",NewName="/Script/CPP_Unreal.PCH_Base.DefaultSpeed")
