boost not working?

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,3 +108,4 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.IADataConfig.Jump",NewName="/Script/CPP_Unreal.IADataConfig.Boost")
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.WalkSpeed",NewName="/Script/CPP_Unreal.PCH_Base.DefaultSpeed")
++FunctionRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.BoostStopAction",NewName="/Script/CPP_Unreal.PCH_Base.BoostStopActionImplementation")
