--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -109,3 +109,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.IADataConfig.Jump",NewName="/Script/CPP_Unreal.IADataConfig.Boost")
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.WalkSpeed",NewName="/Script/CPP_Unreal.PCH_Base.DefaultSpeed")
 +FunctionRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.BoostStopAction",NewName="/Script/CPP_Unreal.PCH_Base.BoostStopActionImplementation")
++PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.BoostParticle",NewName="/Script/CPP_Unreal.PCH_Base.BoostFX")
