Projectiles and Air Particles

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -117,4 +117,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.DeaccelerationRate",NewName="/Script/CPP_Unreal.PCH_Base.DecelerationRate")
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.BoostSpeedMultiplier",NewName="/Script/CPP_Unreal.PCH_Base.BoostMultiplier")
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.IADataConfig.Deaccelerate",NewName="/Script/CPP_Unreal.IADataConfig.Decelerate")
++PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.ShipFX",NewName="/Script/CPP_Unreal.PCH_Base.BoostFX")
 
