--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -118,4 +118,6 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.BoostSpeedMultiplier",NewName="/Script/CPP_Unreal.PCH_Base.BoostMultiplier")
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.IADataConfig.Deaccelerate",NewName="/Script/CPP_Unreal.IADataConfig.Decelerate")
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.ShipFX",NewName="/Script/CPP_Unreal.PCH_Base.BoostFX")
++PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.MuzzlePoint",NewName="/Script/CPP_Unreal.PCH_Base.LeftMuzzlePoint")
++PropertyRedirects=(OldName="/Script/CPP_Unreal.ObstacleBase.FireAudioVolume",NewName="/Script/CPP_Unreal.ObstacleBase.DestroyAudioVolume")
 
