--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -120,4 +120,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.ShipFX",NewName="/Script/CPP_Unreal.PCH_Base.BoostFX")
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.PCH_Base.MuzzlePoint",NewName="/Script/CPP_Unreal.PCH_Base.LeftMuzzlePoint")
 +PropertyRedirects=(OldName="/Script/CPP_Unreal.ObstacleBase.FireAudioVolume",NewName="/Script/CPP_Unreal.ObstacleBase.DestroyAudioVolume")
++FunctionRedirects=(OldName="/Script/CPP_Unreal.ProjectileBase.ProjectileHit",NewName="/Script/CPP_Unreal.ProjectileBase.OnProjectileOverlap")
 
